--- a/client/res/drawable/button.xml
+++ b/client/res/drawable/button.xml
@@ -24,15 +24,7 @@
   ~ OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 
-<resources>
-    <string name="app.name">DIY Remote</string>
-    <string name="app.description">Hand-made</string>
-
-    <string name="preferences.connection">Connection</string>
-
-    <string name="preferences.connection.url">URL</string>
-    <string name="preferences">Preferences</string>
-    <string name="preferences.connection.url.summary">Set connection URL of your PC</string>
-
-    <string name="main.startButton.label">Start</string>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/buttonPressedColor" android:state_pressed="true"/>
+    <item android:drawable="@color/buttonColor"/>
+</selector>
