--- a/client/res/layout/main.xml
+++ b/client/res/layout/main.xml
@@ -28,6 +28,23 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-        >
-
+              android:id="@+id/contentPane">
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/statusLabel"/>
+    <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/startPane">
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/startButton"
+                android:layout_centerInParent="true"
+                android:src="@drawable/connect"
+                android:background="@drawable/button"
+                android:padding="10dp"
+                android:contentDescription="@string/main.startButton.label"/>
+    </RelativeLayout>
 </LinearLayout>
